feat: working on a pc. Swagger
