# internal/dto/subscription.go
@@ -11,11 +11,11 @@ import (
 const TIME_FORMAT = "01-2006"
 
 type Subscription struct {
-	ServiceName string  `json:"service_name"`
-	Price       int     `json:"price"`
-	UserID      string  `json:"user_id"`
-	StartDate   string  `json:"start_date"`
-	EndDate     *string `json:"end_date"`
+	ServiceName string  `json:"service_name" example:"Yandex Plus"`
+	Price       int     `json:"price" example:"400"`
+	UserID      string  `json:"user_id" example:"60601fee-2bf1-4721-ae6f-7636e79a0cba"`
+	StartDate   string  `json:"start_date" example:"07-2025"`
+	EndDate     *string `json:"end_date" example:"08-2025"`
 }
 
 func FromSql(subSql db.Subscription) Subscription {
